// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders SendOnEnterMenu on click unchanged 1`] = `
<div>
  <div
    class="memori-dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="memori-button memori-button--ghost memori-button--md memori-button--icon-only"
      id="base-ui-:r4:"
      tabindex="0"
      type="button"
    >
      <span
        class="memori-button__icon"
      >
        <svg
          class="lucide lucide-ellipsis-vertical"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="1"
          />
          <circle
            cx="12"
            cy="5"
            r="1"
          />
          <circle
            cx="12"
            cy="19"
            r="1"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`renders SendOnEnterMenu on keypress unchanged 1`] = `
<div>
  <div
    class="memori-dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="memori-button memori-button--ghost memori-button--md memori-button--icon-only"
      id="base-ui-:ra:"
      tabindex="0"
      type="button"
    >
      <span
        class="memori-button__icon"
      >
        <svg
          class="lucide lucide-ellipsis-vertical"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="1"
          />
          <circle
            cx="12"
            cy="5"
            r="1"
          />
          <circle
            cx="12"
            cy="19"
            r="1"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
